<resources>
    <!-- Crash Dialog -->
    <string name="hockeyapp_crash_dialog_app_name_fallback">This app</string>
    <string name="hockeyapp_crash_dialog_title">%s Unexpectedly Quit</string>
    <string name="hockeyapp_crash_dialog_message">Would you like to send an anonymous report so we can fix the problem?</string>
    <string name="hockeyapp_crash_dialog_negative_button">Don\'t Send</string>
    <string name="hockeyapp_crash_dialog_neutral_button">Always Send</string>
    <string name="hockeyapp_crash_dialog_positive_button">Send Report</string>

    <!-- Download Failed -->
    <string name="hockeyapp_download_failed_dialog_title">Download Failed</string>
    <string name="hockeyapp_download_failed_dialog_message">The update could not be downloaded. Would you like to try again?</string>
    <string name="hockeyapp_download_failed_dialog_negative_button">Cancel</string>
    <string name="hockeyapp_download_failed_dialog_positive_button">Retry</string>

    <!-- Update -->
    <string name="hockeyapp_update_mandatory_toast">%s is available and is a mandatory update!</string>
    <string name="hockeyapp_update_dialog_title">Update Available</string>
    <string name="hockeyapp_update_button">Update</string>
    <string name="hockeyapp_update_restore" translatable="false">Restore</string>
    <string name="hockeyapp_update_dialog_message">Show information about the new update?</string>
    <string name="hockeyapp_update_dialog_negative_button">Ignore</string>
    <string name="hockeyapp_update_dialog_positive_button">Show</string>
    <string name="hockeyapp_update_version_details_label" translatable="false">%1$s\n%2$s - %3$s</string>
    <string name="hockeyapp_update_title" translatable="false">App Update</string>
    <string name="hockeyapp_update_unknown_size" translatable="false">Unknown size</string>
    <string name="hockeyapp_update_version" translatable="false">Version %s</string>
    <string name="hockeyapp_update_newest_version" translatable="false">Newest version</string>
    <string name="hockeyapp_update_already_installed" translatable="false">INSTALLED</string>
    <string name="hockeyapp_update_loading" translatable="false">Loading…</string>
    <string name="hockeyapp_update_no_info" translatable="false">No information.</string>

    <!-- Expiry Info -->
    <string name="hockeyapp_expiry_info_title">Build Expired</string>
    <string name="hockeyapp_expiry_info_text">%s has expired. Please check HockeyApp for any updates.</string>

    <!-- Feedback Activity -->
    <string name="hockeyapp_feedback_failed_title">Pending</string>
    <string name="hockeyapp_feedback_failed_text">Would you like to send your feedback again?</string>
    <string name="hockeyapp_feedback_name_hint">Name</string>
    <string name="hockeyapp_feedback_email_hint">Email</string>
    <string name="hockeyapp_feedback_subject_hint">Subject</string>
    <string name="hockeyapp_feedback_message_hint">Message</string>
    <string name="hockeyapp_feedback_last_updated_text">Last Updated: %s</string>
    <string name="hockeyapp_feedback_attachment_button_text">Add Attachment</string>
    <string name="hockeyapp_feedback_attachment_remove_description">Remove attachment</string>
    <string name="hockeyapp_feedback_attachment_added">Attachment added</string>
    <string name="hockeyapp_feedback_attachment_removed">Attachment removed</string>
    <string name="hockeyapp_feedback_send_button_text">Send Feedback</string>
    <string name="hockeyapp_feedback_response_button_text">Add a Response</string>
    <string name="hockeyapp_feedback_refresh_button_text">Refresh</string>
    <string name="hockeyapp_feedback_title">Feedback</string>
    <string name="hockeyapp_feedback_send_generic_error">Message couldn\'t be posted. Please check your input values and your connection, then try again.</string>
    <string name="hockeyapp_feedback_send_network_error">No response from server. Please check your connection, then try again.</string>
    <string name="hockeyapp_feedback_validate_subject_error">Please enter a subject</string>
    <string name="hockeyapp_feedback_validate_email_error">Please enter a valid email address</string>
    <string name="hockeyapp_feedback_validate_email_empty">Please enter an email address</string>
    <string name="hockeyapp_feedback_validate_name_error">Please enter your name</string>
    <string name="hockeyapp_feedback_validate_text_error">Message couldn\'t be posted. Please enter a feedback text</string>
    <string name="hockeyapp_feedback_generic_error">An error has occurred</string>
    <string name="hockeyapp_feedback_attach_file">Attach File</string>
    <string name="hockeyapp_feedback_attach_picture">Attach Picture</string>
    <string name="hockeyapp_feedback_select_file">Select File</string>
    <string name="hockeyapp_feedback_select_picture">Select Picture</string>
    <string name="hockeyapp_feedback_max_attachments_allowed">Only %d attachments allowed.</string>
    <string name="hockeyapp_feedback_attachment_loading">Loading…</string>
    <string name="hockeyapp_feedback_attachment_error">Error</string>
    <string name="hockeyapp_feedback_name_hint_required">Name (required)</string>
    <string name="hockeyapp_feedback_email_hint_required">Email (required)</string>
    <string name="hockeyapp_feedback_subject_hint_required">Subject (required)</string>
    <string name="hockeyapp_feedback_message_hint_required">Message (required)</string>

    <!-- Send Feedback Task -->
    <string name="hockeyapp_feedback_sending_feedback_text">Sending feedback…</string>
    <string name="hockeyapp_feedback_fetching_feedback_text">Retrieving discussions…</string>
    <string name="hockeyapp_feedback_sent_toast">Feedback sent</string>

    <!-- Feedback Screenshot -->
    <string name="hockeyapp_feedback_screenshot_publish" translatable="false">Screenshot \"%s\" is available in gallery.</string>
    <string name="hockeyapp_feedback_screenshot_fail" translatable="false">Screenshot could not be created. Sorry.</string>
    <string name="hockeyapp_feedback_screenshot_notification_title" translatable="false">HockeyApp Feedback</string>
    <string name="hockeyapp_feedback_screenshot_notification_message" translatable="false">Take a screenshot for your feedback.</string>

    <!-- Login Activity -->
    <string name="hockeyapp_login_headline_text">Please enter your HockeyApp account\'s email address and password to authorize access to this app.</string>
    <string name="hockeyapp_login_headline_text_email_only">Please enter your HockeyApp account\'s email address to authorize access to this app.</string>
    <string name="hockeyapp_login_missing_credentials_toast">Please fill in the missing account credentials.</string>
    <string name="hockeyapp_login_email_hint">Email</string>
    <string name="hockeyapp_login_password_hint">Password</string>
    <string name="hockeyapp_login_login_button_text">Login</string>
    <string name="hockeyapp_login_email_hint_required">Email (required)</string>
    <string name="hockeyapp_login_password_hint_required">Password (required)</string>

    <!-- Paint Activity -->
    <string name="hockeyapp_paint_indicator_toast">Draw something!</string>
    <string name="hockeyapp_paint_menu_save">Save</string>
    <string name="hockeyapp_paint_menu_undo">Undo</string>
    <string name="hockeyapp_paint_menu_clear">Clear</string>
    <string name="hockeyapp_paint_dialog_message">Do you want to save your drawings?</string>
    <string name="hockeyapp_paint_dialog_negative_button">Discard</string>
    <string name="hockeyapp_paint_dialog_positive_button">Save</string>
    <string name="hockeyapp_paint_dialog_neutral_button">Cancel</string>

    <!-- Permissions -->
    <string name="hockeyapp_permission_update_title">Need storage access</string>
    <string name="hockeyapp_permission_update_message">In order to download and install app updates you will have to allow the app to access your device storage.</string>
    <string name="hockeyapp_permission_dialog_negative_button">Cancel</string>
    <string name="hockeyapp_permission_dialog_positive_button">Retry</string>

    <!-- Dialogs -->
    <string name="hockeyapp_dialog_positive_button">OK</string>
    <string name="hockeyapp_dialog_negative_button">Cancel</string>
    <string name="hockeyapp_dialog_error_title">Error</string>
    <string name="hockeyapp_dialog_error_message">An error has occurred</string>

    <!-- Misc -->
    <string name="hockeyapp_error_no_network_message">Your device is not connected to the internet. Please resolve connectivity issues and try again.</string>
    <string name="hockeyapp_error_no_external_storage_permission" translatable="false">The permission to access the external storage permission is not set. Please contact the developer.</string>
    <string name="hockeyapp_error_install_form_unknown_sources_disabled" translatable="false">The installation from unknown sources is not enabled. Please check the device settings.</string>

</resources>
